Gave my homepage a work in progress projects section, and upped my media breakpoint to 1000px, to avoid a flex wrap bug.

--- a/style.css
+++ b/style.css
@@ -92,17 +92,16 @@ header {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background-color: blue;
 }
 
 .homeimg {
-  background-color: red;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 50px;
 }
 
 .roundhead {
@@ -118,7 +117,7 @@ header {
   justify-content: center;
   font-family: 'Anton', sans-serif;
   text-align: center;
-  background-color: green;
+  margin: 50px;
 }
 
 .link {
@@ -139,12 +138,28 @@ header {
   font-size: 25px;
 }
 
-.projects {
+.pheader {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
   margin-top: 50px;
+  margin-bottom: 50px;
   text-align: center;
+}
+
+.pcontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space between;
+  flex-wrap: wrap;
+}
+
+.pcontainer img {
+  max-width: 30%;
+  height: auto;
+  margin: 1.33%;
+  border-radius: 5%;
 }
 
 .indexheader {
@@ -156,7 +171,7 @@ header {
 
 /*Below is my media query designed specifically for my home page's container. Also took a lot of tweaking, and was my first real delve into formatting my own media queries. Very proud at it's accuracy to my wireframe.*/
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .container {
     padding: 0;
     flex-direction: column;
@@ -167,8 +182,14 @@ header {
   .roundhead {
     max-width: 70%;
   }
-  .projects {
+  .pheader {
     margin-top: 10px;
+  }
+  .homeimg {
+    margin: 0;
+  }
+  .homelinks {
+    margin: 0;
   }
 }
 
